--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -16,3 +16,19 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.mainText {
+    padding: 5px 20px;
+}
+
+.mainImage {
+    border-radius: 20px;
+    filter: drop-shadow(0px 0px 10px rgb(0,0,0,0.3));
+    margin: 25px;
+    width: 340px;
+}
+
+.mainSubTitle {
+    font-weight: 400;
+    letter-spacing: 2px;
+}
