--- a/Pages/Pizza.cshtml
+++ b/Pages/Pizza.cshtml
@@ -12,6 +12,7 @@
         <p class="smallText"><i>Only one pizza per order.</i></p>
     </div>
     <div class="container">
+        <div class="row">
         <div class="col-12 mb-5 mt-5">
             <div class="w-100 row makeYourOwnDiv">
                 <div class="col-4">
@@ -25,6 +26,19 @@
                     </div>
                 </div>
             </div>
+        </div>
+            @foreach (var pizza in Model.fakePizzaDB)
+            {
+                var imagePath = "~/images/Pizzas/" + (pizza.ImageTitle + ".png");
+
+                <div class="col-4 mb-5">
+                    <img src="@imagePath" class="w-100" asp-append-version="true" />
+                    <a class ="btn alert-primary mt-1" asp-area="" asp-page="Checkout/Checkout" 
+                    asp-route-ImageTitle="@pizza.ImageTitle" 
+                    asp-route-PizzaPrice="@pizza.FinalPrice">Get this Pizza!</a>
+                    <br />
+                </div>
+            }
         </div>
     </div>
 </div>
