--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -11,6 +11,6 @@
     </div>
     <img class="mainImage" src="~/images/PizzaTime.jpg" />
     <br />
-    <a class="btn btn-primary mt-1" asp-area="" asp-page="Checkout/ThankYou">BRING ME THAT PIZZA</a>
+    <a class="btn btn-primary mt-1" asp-area="" asp-page="/Pizza">BRING ME THAT PIZZA</a>
 
 </div>
