--- a/Pages/Checkout/ThankYou.cshtml
+++ b/Pages/Checkout/ThankYou.cshtml
@@ -2,5 +2,5 @@
 @model RazorPizzeria.Pages.Checkout.ThankYouModel
 @{
 }
-<h1>Thank you for ordering with us at Razor Sharp Pizzas!
+<h1 class="text-center">Thank you for ordering with us at Razor Sharp Pizzas!
 </h1>
